editor linked to compiler successfully

--- a/public/html/editor.html
+++ b/public/html/editor.html
@@ -107,15 +107,13 @@
       <div class="container">
         <div id="editor" class="item1"></div>
         <div class="item2">
-          <textarea id="input_box" name="input_box" rows="4" cols="20">
-          </textarea>
+          <textarea id="input_box" name="input_box" rows="4" cols="20"></textarea>
         </div>
         <div class="item3">
-          <textarea id="output_box" name="output_box" rows="4" cols="20">
-          </textarea>
+          <textarea id="output_box" name="output_box" rows="4" cols="20"></textarea>
         </div>
         <div class="button-div">
-          <button class="waves-effect waves-light btn">Run</button>
+          <button class="waves-effect waves-light btn submit-code">Run</button>
         </div>
       </div>
     </div>
