--- a/public/html/editor.html
+++ b/public/html/editor.html
@@ -78,7 +78,7 @@
               <label for="languages">Language : </label>
               <div class="select">
                 <select id="languages" class="custom-select" name="languages" style="display: block">
-                  <option value="null">C++</option>
+                  <option value="cpp17">C++</option>
                   <option value="c">C</option>
                   <option value="python2">Python</option>
                   <option value="java">Java</option>
@@ -135,7 +135,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.13/ace.js"
     integrity="sha512-OMjy8oWtPbx9rJmoprdaQdS2rRovgTetHjiBf7RL7LvRSouoMLks5aIcgqHb6vGEAduuPdBTDCoztxLR+nv45g=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="../js/editor.js"></script>
+  <script src="../js/editor.js" type="module"></script>
   <script src="../js/problem.js"></script>
 </body>
 
