--- a/public/html/submissions.html
+++ b/public/html/submissions.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    
+
     <link
       rel="shortcut icon"
       href="../resources/logo.png"
@@ -69,23 +69,10 @@
           </form>
         </div>
       </div>
-
-      <div class="dashboard-page-body">
-        <div class="dashboard-body-content">
-          <div class="dashboard-hey">Hey,</div>
-          <div class="dashboard-username"></div>
-          <div class="dashboard-hope">Hope You're Doing Well</div>
-          <div class="dashboard-welcome">
-            Welcome to JuggaCode (Judge-a-Code)!
-          </div>
-        </div>
-        <div class="dashboard-body-img">
-          <img class="dashboard-img" src="../resources/home img.png" alt="" />
-        </div>
-      </div>
+      This is the submissions page
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="../js/dashboard.js"></script>
+    <script src="../js/submissions.js"></script>
   </body>
 </html>
