--- a/public/html/editor.html
+++ b/public/html/editor.html
@@ -79,7 +79,7 @@
             </div>
           </div>
 
-          <div class="problem-body">
+          <div class="problem-body1">
             <div class="problem-head">
               <div class="problem-title">
                 CQXYM Count Permutations
