navbar update for all pages

--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -45,6 +45,12 @@
             <div class="navbar-practice-title">Practice</div>
           </a>
         </div>
+
+        <div class="navbar-submissions">
+          <a href="/submissions" class="navbar-submissions-link">
+            <div class="navbar-submissions-title">My Submissions</div>
+          </a>
+        </div>
       </div>
 
       <div class="home-navbar-right">
