--- a/public/html/submissions.html
+++ b/public/html/submissions.html
@@ -1,78 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link rel="stylesheet" href="../css/style.css" />
 
-    <link
-      rel="shortcut icon"
-      href="../resources/logo.png"
-      type="image/x-icon"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
-      rel="stylesheet"
-    />
-    <title>JuggaCode!</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 
-  <body>
-    <div class="dashboard-page">
-      <div class="home-page-navbar z-depth-3">
-        <div class="home-navbar-left">
-          <div class="navbar-logo">
-            <a href="/dashboard" title="Home" class="navbar-logo-link">
-              <div class="navbar-logo-img">
-                <img class="navbar-img" src="../resources/logo.png" alt="" />
-              </div>
-              <div class="navbar-logo-title">JuggaCode</div>
-            </a>
-          </div>
+  <link rel="shortcut icon" href="../resources/logo.png" type="image/x-icon" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" />
+  <title>JuggaCode!</title>
+</head>
 
-          <div class="navbar-code">
-            <a href="/editor" class="navbar-code-link">
-              <div class="navbar-code-title">Code</div>
-            </a>
-          </div>
-
-          <div class="navbar-stats">
-            <a href="/stats" class="navbar-stats-link">
-              <div class="navbar-stats-title">My stats</div>
-            </a>
-          </div>
-
-          <div class="navbar-practice">
-            <a href="/practice" class="navbar-practice-link">
-              <div class="navbar-practice-title">Practice</div>
-            </a>
-          </div>
+<body>
+  <div class="dashboard-page">
+    <div class="home-page-navbar z-depth-3">
+      <div class="home-navbar-left">
+        <div class="navbar-logo">
+          <a href="/dashboard" title="Home" class="navbar-logo-link">
+            <div class="navbar-logo-img">
+              <img class="navbar-img" src="../resources/logo.png" alt="" />
+            </div>
+            <div class="navbar-logo-title">JuggaCode</div>
+          </a>
         </div>
 
-        <div class="home-navbar-right">
-          <div class="navbar-profile">
-            <a href="/profile" class="navbar-profile-link" title="My Profile">
-              <div class="navbar-profile-img"></div>
-            </a>
-          </div>
-          <form action="/user/logout" class="navbar-logout">
-            <button class="waves-effect waves-light btn user-logout-but">
-              Logout
-            </button>
-          </form>
+        <div class="navbar-code">
+          <a href="/editor" class="navbar-code-link">
+            <div class="navbar-code-title">Code</div>
+          </a>
+        </div>
+
+        <div class="navbar-stats">
+          <a href="/stats" class="navbar-stats-link">
+            <div class="navbar-stats-title">My stats</div>
+          </a>
+        </div>
+
+        <div class="navbar-practice">
+          <a href="/practice" class="navbar-practice-link">
+            <div class="navbar-practice-title">Practice</div>
+          </a>
+        </div>
+
+        <div class="navbar-submissions">
+          <a href="/submissions" class="navbar-submissions-link">
+            <div class="navbar-submissions-title">My Submissions</div>
+          </a>
         </div>
       </div>
-      This is the submissions page
-    </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="../js/submissions.js"></script>
-  </body>
+      <div class="home-navbar-right">
+        <div class="navbar-profile">
+          <a href="/profile" class="navbar-profile-link" title="My Profile">
+            <div class="navbar-profile-img"></div>
+          </a>
+        </div>
+        <form action="/user/logout" class="navbar-logout">
+          <button class="waves-effect waves-light btn user-logout-but">
+            Logout
+          </button>
+        </form>
+      </div>
+    </div>
+    This is the submissions page
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="../js/submissions.js"></script>
+</body>
+
 </html>
