stats page updated

--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -89,7 +89,18 @@
           </div>
         </div>
         <div class="canvas-container">
-          <canvas id="myChart"></canvas>
+          <div class="rating-div">
+            <canvas id="myChart"></canvas>
+          </div>
+          <div class="problems-div">
+            <canvas id="tags"></canvas>
+          </div>
+          <div class="submissions-div">
+            <canvas id="submissions"></canvas>
+          </div>
+          <div class="rat-subm-div">
+            <canvas id="rating-subm"></canvas>
+          </div>
         </div>
       </div>
     </div>
