submission page changes, merge from umang

--- a/public/html/submissions.html
+++ b/public/html/submissions.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+  
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="stylesheet" href="../css/submission.css" />
 
@@ -71,10 +72,17 @@
 
     <div class="submission-content">
       <div class="submission-list">
-        this is list
+        <div>ID</div>
+        <div>Question</div>
+        <div>User</div>
+        <div>Verdict</div>
       </div>
-  
+      
       <div class="filters">
+
+        <input type="checkbox" name="your" id="your" class="browser-default" value="true" checked="true">
+        <label class="browser-default"> your only </label><br>
+
         <p> Apply filters</p>
         <div class="question-selector">
           <p>Question</p>
