--- a/public/html/submissions.html
+++ b/public/html/submissions.html
@@ -95,11 +95,11 @@
 
           <p>Verdict</p>
           <select name="verd" id="verd" class="browser-default">
-            <option value="0">All</option>
-            <option value="1">Accepted</option>
-            <option value="2">Wrong Answer</option>
-            <option value="3">Time Limit Exceeded</option>
-            <option value="3">Run Time Error</option>
+            <option value="All">All</option>
+            <option value="Accepted">Accepted</option>
+            <option value="Wrong Answer">Wrong Answer</option>
+            <option value="Time Limit Exceeded">Time Limit Exceeded</option>
+            <option value="Run Time Error">Run Time Error</option>
           </select>
           
           <p>User</p>
