--- a/public/html/editor.html
+++ b/public/html/editor.html
@@ -496,6 +496,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="../js/editor.js" type="module"></script>
   <script src="../js/problem.js"></script>
+  <script src="../js/verdict.js"></script>
 </body>
 
 </html>
