submissions page time display, merge from shubhang

--- a/public/html/submissions.html
+++ b/public/html/submissions.html
@@ -71,10 +71,11 @@
 
     <div class="submission-content">
       <div class="submission-list">
-        <div>ID</div>
-        <div>Question</div>
-        <div>User</div>
-        <div>Verdict</div>
+        <div class="submission-cell"><h4>ID</h4></div>
+        <div class="submission-cell"><h4>Question</h4></div>
+        <div class="submission-cell"><h4>User</h4></div>
+        <div class="submission-cell"><h4>Verdict</h4></div>
+        <div class="submission-cell"><h4>Time</h4></div>
       </div>
       
       <div class="filters">
